--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+    text-align: center;
+    height: 100vh;
+    background-image: url(./background.png);
+    background-size: cover;
+}
+
+.Background {
+    background-size: cover;
 }
 
 .App-logo {
